# wyze-playground

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_wyze_bulbs.py
wyze_playground/: basic_menu.py
