[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wyze-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
frozendict = "^2.3.5"
wyze-sdk = "^1.10.0"
overrides = "^7.3.1"
cleo = "^2.0.1"

[tool.poetry.group.dev.dependencies]
assertpy = "1.1"
flake8-builtins = "1.5.3"
flake8-executable = "2.1.1"
flake8-logging-format = "0.6.0"
flake8-multiline-containers = "0.0.18"
flake8-mutable = "1.2.0"
flake8-pytest-style = "1.5.1"
flake8-simplify = "0.14.2"
flake8-walrus = "1.1.0"
isort = "5.10.1"
mypy = "0.910"
pyfakefs = "4.5.3"
pytest-cov = "3.0.0"
pytest-mock = "3.6.1"
pytest-sugar = "0.9.4"
testfixtures = "6.18.3"
toml-sort = "0.19.0"
tox-poetry-installer = {extras = ["poetry"], version = "0.8.2"}
pytest = "7.1.2"
wemake-python-styleguide = "^0.17.0"

